# Razvodovsky_Vladislav

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: Blinky.cpp  Blinky.h  BlinkyChase.cpp  BlinkyChase.h  CMakeLists.txt  Characters.cpp  Characters.h  Clyde.cpp  Clyde.h  ClydeChase.cpp  ClydeChase.h  Die.cpp  Die.h  Drawer.cpp  Drawer.h  Game.cpp  Game.h  GameController.cpp  GameController.h  Ghost.cpp  Ghost.h  Inky.cpp  Inky.h  InkyChase.cpp  InkyChase.h  Lose.cpp  Lose.h  MainMenu.cpp  MainMenu.h  Pinky.cpp  Pinky.h  PinkyChase.cpp  PinkyChase.h  Player.cpp  Player.h  Scene.cpp  Scene.h  Support.h  main.cpp
assets/Characters/: CMakeLists.txt  Characters.cpp
assets/Characters/Ghost/: CMakeLists.txt  Ghost.cpp
assets/Characters/Ghost/Blinky/: Blinky.cpp  CMakeLists.txt  main.cpp
assets/Characters/Ghost/Clyde/: CMakeLists.txt  Clyde.cpp  main.cpp
assets/Characters/Ghost/Inky/: CMakeLists.txt  Inky.cpp  main.cpp
assets/Characters/Ghost/Pinky/: CMakeLists.txt  Pinky.cpp  main.cpp
assets/Characters/Player/: CMakeLists.txt  Player.cpp
assets/Drawer/: CMakeLists.txt  Drawer.cpp  Drawer.h
assets/GameController/: CMakeLists.txt  GameController.cpp
assets/Mode/: CMakeLists.txt  Initializing.cpp  Mode.cpp  Scatter.cpp  Scatter.h
assets/Mode/Chase/: CMakeLists.txt
assets/Mode/Chase/Blinky/: BlinkyChase.cpp  CMakeLists.txt
assets/Mode/Chase/Clyde/: CMakeLists.txt  ClydeChase.cpp
assets/Mode/Chase/Inky/: CMakeLists.txt  InkyChase.cpp
assets/Mode/Chase/Pinky/: CMakeLists.txt  PinkyChase.cpp
assets/Scene/: CMakeLists.txt  Scene.cpp  Scene.h
assets/Scene/Die/: CMakeLists.txt  Die.cpp
assets/Scene/Game/: CMakeLists.txt  Game.cpp
assets/Scene/Lose/: CMakeLists.txt  Lose.cpp
assets/Scene/MainMenu/: CMakeLists.txt  MainMenu.cpp
assets/Support/: CMakeLists.txt  Support.cpp
assets/headers/: Blinky.h  BlinkyChase.h  Characters.h  Clyde.h  ClydeChase.h  Die.h  Drawer.h  Game.h  GameController.h  Ghost.h  Initializing.h  Inky.h  InkyChase.h  Lose.h  MainMenu.h  Mode.h  Pinky.h  PinkyChase.h  Player.h  Scatter.h  Scene.h  Support.h
ghosts_proc/: BlinkyMain  ClydeMain  InkyMain  PinkyMain
